# taba

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
configs/diversity/: calc_diversity_two_samples.yaml
configs/invert_forward/: adm.yaml  dit.yaml  if.yaml  ldm.yaml
configs/invert_swap/: dit.yaml  if.yaml  ldm.yaml
configs/masactrl/: edit_real.yaml
configs/sampling/: adm.yaml  dit.yaml  if.yaml  ldm.yaml
configs/sdxl/: edit.yaml  sample_inv_recon.yaml
configs/style_aligned/: transfer.yaml
datasets/: README.md  celeba.py  cifar10.py  clean_imagenet.py  convert_imagenet.py  tiny_imagenet.py
guided_diffusion/: ckpts_utils.py  dist_util.py  gaussian_diffusion.py  image_datasets.py  logger.py  script_util.py  train_util.py
slurm_scripts/adms/: cifar10_1gpu_sbatch.sh  inet_4gpu_sbatch.sh  multi_metrics.sh  multi_sampling.sh  noising_similarity.sh
slurm_scripts/scripts/adm/: run_adm_sampling.sh
slurm_scripts/scripts/deepfloyd_if/: run_if_invert.sh  run_if_invert_forward.sh  run_if_sampling.sh  run_if_sampling_corrT.sh  run_if_sampling_from_input_edit.sh  run_if_sampling_internal.sh
slurm_scripts/scripts/dit/: run_dit_invert.sh  run_dit_invert_forward.sh  run_dit_sampling.sh  run_dit_sampling_corrT.sh  run_dit_sampling_from_input_edit.sh  run_dit_sampling_from_input_interpolations.sh  (+1 more)
slurm_scripts/sh/: train_cifar10_checkpointed_1gpu.sh  train_imagenet_checkpointed_4gpu.sh
taba/: _hydra.py  utils.py
taba/ddim/: schedulers.py
taba/exp_pipelines/: angle_distance_stats.py  interpolate_with_steps.py  invert_images.py  most_probable_triangle.py  mse_classify_distances.py  n_models.py  pca_vis.py  plain_masks.py  plot_intermediate.py  sample_from_noise.py  sample_per_T.py  similarity_last_sample.py  steps_statistics.py  steps_statistics_last_sample.py  trainsteps_classifier_stats.py
taba/interpolations/: interpolate_ssims_l2.py  interpolate_ssims_l2_noise_vs_latent.py  interpolations.py
taba/metrics/: alignment.py  angles_distances.py  annotator.py  clip_dino.py  clip_score.py  correlation.py  diversity.py  fid.py  inception.py  normality.py  pixel_diversity.py
taba/models/dit/: dit.py  (+2 more)
taba/plotting/: fid_interpolate.py  interpolate_denoising.py  interpolate_fid.py  vis_trainsteps_image_alignment.py  vis_trainsteps_spatial.py
(+46 files in other folders)
